output/context/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestObjectIdSerialization.java
public Obj()
public Obj(int id)
public SetContainer()
public SetContainer(int id)
public ArrContainer()
public ArrContainer(int id)
public void testArraySerialization() throws Exception
public void testCollectionSerialization() throws Exception
public void testDeserialization() throws Exception
ObjectMapper MAPPER=Optional[new ObjectMapper()]
String EXP_ARR_SET=Optional["{\"id\":4,\"objs\":[1,7]}"]
